<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rel_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactListActivity">

    <TextView
        android:id="@+id/txt_main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strAddressBook"
        android:textAlignment="center"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rel_addRemoveOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_main_header"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/txt_main_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_violet_selector"
            android:onClick="onClickEvent"
            android:padding="5dp"
            android:text="@string/strAdd"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_main_removeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/light_violet_selector"
            android:onClick="onClickEvent"
            android:padding="5dp"
            android:text="@string/strRemoveAll"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_addRemoveOption"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txt_main_noRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/strNoRecordFound"
            android:textAlignment="center"
            android:textSize="18sp" />
    </FrameLayout>
</RelativeLayout>