<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddRecordActivity">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strDetails"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_registerOrUpdate"
        android:layout_below="@+id/txt_header">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:onClick="onClickEvent"
                android:src="@drawable/ic_missing_profile_dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_tag_faces_black_24dp"/>

                <EditText
                    android:id="@+id/edt_firstName"
                    style="@style/EditTextStyle"
                    android:hint="@string/strFirstName"
                    android:inputType="text"
                    android:maxLength="@integer/txtLength" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_tag_faces_black_24dp" />

                <EditText

                    android:id="@+id/edt_lastName"
                    style="@style/EditTextStyle"
                    android:hint="@string/strLastName"
                    android:inputType="text"
                    android:maxLength="@integer/txtLength" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditTextStyle"
                    android:hint="@string/strEmail"
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/txtEmailLength" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_contact_phone_black_24dp" />

                <EditText
                    android:id="@+id/edt_phone"
                    style="@style/EditTextStyle"
                    android:hint="@string/strPhone"
                    android:inputType="number"
                    android:maxLength="@integer/phoneLength" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_registerOrUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:onClick="onClickEvent"
        android:text="@string/strSave" />
</RelativeLayout>